# Jimmy-s_Coffee_Cup

./: Angajati.cpp  Angajati.h  CMakeLists.txt  Comenzi.cpp  Comenzi.h  Evenimente.cpp  Evenimente.h  Produse.cpp  Produse.h  Rapoarte.cpp  Rapoarte.h  angajati.csv  comenzi.csv  evenimente.csv  main.cpp  menu.csv  produse.csv  rapoarte.csv
